--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-octi-test></app-octi-test>
-
+<!--<app-octi-test></app-octi-test>-->
+<app-ui-menu></app-ui-menu>
 <router-outlet></router-outlet>
