Moved gtfs parsing methods to allow uploaded files to be drawn.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--<app-octi-test></app-octi-test>-->
 <app-ui-menu></app-ui-menu>
+<app-drawingplane></app-drawingplane>
 <router-outlet></router-outlet>
