--- a/src/app/ui-menu/dialog-data-selection.html
+++ b/src/app/ui-menu/dialog-data-selection.html
@@ -31,7 +31,14 @@
         <span>Select Filters</span>
     </mat-toolbar>
     <div>TODO: Add Filter options</div>
+    <hr>
+    <div>
+        <div style="display: flex; flex-flow: column">
+            <mat-checkbox [(ngModel)]="allowCrossing" class="example-margin">Allow lines to cross each other</mat-checkbox>
+            Warning: Some lines may not be positionable if crossing is not allowed.
+        </div>
+    </div>
     <div class="selectButtonDiv">
-        <button mat-raised-button (click)="sendData()">Select</button>
+        <button mat-raised-button (click)="sendData()" >Draw Graph</button>
     </div>
 </div>
