--- a/src/app/ui-menu/dialog-data-selection.html
+++ b/src/app/ui-menu/dialog-data-selection.html
@@ -30,6 +30,28 @@
     <mat-toolbar color="primary">
         <span>Select Filters</span>
     </mat-toolbar>
+    <div style="overflow-y: scroll; overflow-x: hidden; height: 30vh; width: 100%">
+        <table mat-table [dataSource]="lines" style="width: 100%" class="mat-elevation-z8">
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="visible">
+                <th mat-header-cell *matHeaderCellDef>Visible</th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-checkbox (click)="$event.stopPropagation()"
+                                  (change)="$event ? selection.toggle(element) : null"
+                                  [checked]="selection.isSelected(element)">
+                    </mat-checkbox>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
     <div>TODO: Add Filter options</div>
     <hr>
     <div>
