Added scrollbar to filters.

--- a/src/app/ui-menu/dialog-data-selection.html
+++ b/src/app/ui-menu/dialog-data-selection.html
@@ -55,36 +55,38 @@
         </div>
         <div style="margin-left:1em; margin-top:1em; ">
             <div style="margin-top: 1em; margin-bottom: 1em">
-            Multiple strings can be separated by ","
+                Multiple strings can be separated by ","
             </div>
-            <div *ngFor="let el of this.filterIDs"
-                 style="justify-content: center; align-items:center; display: flex; flex-flow: row;">
-                <div>
-                    <mat-form-field appearance="fill" id="{{'form' + el}}">
-                        <mat-select value="must not start" (selectionChange)="changeSelected($event.value, el)">
-                            <mat-option value="must not start">
-                                Must not start with
-                            </mat-option>
-                            <mat-option value="must not end">
-                                Must not end with
-                            </mat-option>
-                            <mat-option value="must start">
-                                Must start with
-                            </mat-option>
-                            <mat-option value="must end">
-                                Must end with
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
+            <div style="overflow-y: scroll; overflow-x: hidden; height: 20em">
+                <div *ngFor="let el of this.filterIDs"
+                     style="justify-content: center; align-items:center; display: flex; flex-flow: row;">
+                    <div>
+                        <mat-form-field appearance="fill" id="{{'form' + el}}">
+                            <mat-select value="must not start" (selectionChange)="changeSelected($event.value, el)">
+                                <mat-option value="must not start">
+                                    Must not start with
+                                </mat-option>
+                                <mat-option value="must not end">
+                                    Must not end with
+                                </mat-option>
+                                <mat-option value="must start">
+                                    Must start with
+                                </mat-option>
+                                <mat-option value="must end">
+                                    Must end with
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                    <div style="margin-left: 1em">
+                        <input id="{{'input' + el}}" placeholder="Enter string" value="">
+                    </div>
+                    <button id="{{'button' + el}}"
+                            style="background-color: red; margin-left: 1em; border-radius: 50%; width: 20px; height:20px"
+                            (click)="removeElementFromFilterList(el)">
+                        -
+                    </button>
                 </div>
-                <div style="margin-left: 1em" >
-                    <input id="{{'input' + el}}" placeholder="Enter string" value="">
-                </div>
-                <button id="{{'button' + el}}"
-                        style="background-color: red; margin-left: 1em; border-radius: 50%; width: 20px; height:20px"
-                        (click)="removeElementFromFilterList(el)">
-                    -
-                </button>
             </div>
             <div>
                 <button mat-mini-fab style="background-color: green" (click)="increaseChoice()">
