--- a/src/app/ui-menu/dialog-data-selection.css
+++ b/src/app/ui-menu/dialog-data-selection.css
@@ -10,3 +10,16 @@
 .mat-table {
     overflow-y: scroll;
 }
+
+.filtersBox {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 20em;
+}
+
+.tableBox {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 30vh;
+    width: 100%;
+}
