Adjusted background style of menu in UI.

--- a/src/app/drawingplane/drawingplane.component.html
+++ b/src/app/drawingplane/drawingplane.component.html
@@ -6,7 +6,7 @@
             <mat-spinner mode="indeterminate"></mat-spinner>
         </div>
     </div>
-    <div style="height: 99%;  width: 20%; overflow-y: auto;margin-left: 2em;">
+    <div style="height: 99%;  width: 20%; overflow-y: auto; padding-left: 2em; background-color: #eceaea">
         <h2>Octilinear Grid Graph</h2>
         <div *ngFor="let el of keys" style="display: flex; flex-flow: row; margin-bottom: 2em">
             <div style="margin-right: 2em">{{el}}:</div>
