Added three perpared input graphs.

--- a/src/app/ui-menu/dialog-data-selection.html
+++ b/src/app/ui-menu/dialog-data-selection.html
@@ -8,7 +8,9 @@
             <mat-radio-group aria-label="Select an option" [(ngModel)]="this.preparedDataSelection"
                              style="display: flex; flex-flow: column; margin-bottom: 2em">
                 <mat-radio-button value="Vienna">Vienna (Metro, Bus, Tram)</mat-radio-button>
-                <mat-radio-button value="2">Another City</mat-radio-button>
+                <mat-radio-button value="Detroit">Detroit</mat-radio-button>
+                <mat-radio-button value="Prague">Prague</mat-radio-button>
+                <mat-radio-button value="Rome">Rome</mat-radio-button>
             </mat-radio-group>
 
             <div class="selectButtonDiv">
