--- a/src/app/ui-menu/dialog-data-selection.html
+++ b/src/app/ui-menu/dialog-data-selection.html
@@ -89,7 +89,7 @@
                         </mat-form-field>
                     </div>
                     <div style="margin-left: 1em">
-                        <input id="{{'input' + el}}" (change)="updateListByStrings($event,el)"
+                        <input id="{{'input' + el}}" (change)="updateListOfStrings($event,el)"
                                placeholder="Enter string"
                                value="">
                     </div>
