--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; /*Needed for popup*/
+
+.highlight {
+    filter: drop-shadow(0 0 0.4rem rgba(0, 0, 0, 0.8));
+    transition: opacity 0.3s ease-in-out;
+}
