--- a/src/app/ui-menu/dialog-data-selection.css
+++ b/src/app/ui-menu/dialog-data-selection.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-flow: row-reverse;
     align-items: center;
+    justify-content: center;
 }
 
 .mat-table {
@@ -30,3 +31,16 @@
     flex-flow: row;
     margin-right: 1em
 }
+
+.grid-container-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content 1fr;
+    gap: 0px 0px;
+    grid-template-areas:
+            "title title"
+            "prepared upload";
+}
+.title { grid-area: title; }
+.prepared { grid-area: prepared; }
+.upload { grid-area: upload; }
