--- a/src/app/ui-menu/dialog-data-selection.css
+++ b/src/app/ui-menu/dialog-data-selection.css
@@ -59,4 +59,4 @@
     overflow-y: auto;
     padding: 1em;
 }
-.settings  { grid-area: settings; }
+.settings  { grid-area: settings; padding-top: 0.5rem; }
