--- a/src/app/ui-menu/dialog-data-selection.html
+++ b/src/app/ui-menu/dialog-data-selection.html
@@ -91,7 +91,7 @@
                                value="">
                     </div>
                     <div style="width: 10%">
-                        <button style="background-color: red; margin-left: 1em; border-radius: 50%; width: 20px; height:20px"
+                        <button style="background-color: red; margin-left: 1em; border-radius: 50%; width: 20px; height:20px; border: none"
                                 (click)="removeElementFromFilterList(filterData, true)">
                         </button>
                     </div>
@@ -124,7 +124,7 @@
                                value="">
                     </div>
                     <div style="width: 10%">
-                        <button style="background-color: red; margin-left: 1em; border-radius: 50%; width: 20px; height:20px"
+                        <button style="background-color: red; margin-left: 1em; border-radius: 50%; width: 20px; height:20px; border: none"
                                 (click)="removeElementFromFilterList(filterData, false)">
                         </button>
                     </div>
@@ -144,11 +144,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
 
     <hr>
     <div>
